--- a/views/login.hbs
+++ b/views/login.hbs
@@ -6,6 +6,7 @@
         {{#if error}}
           <div class="alert alert-danger">{{error}}</div>
         {{/if}}
+        {{!-- Login, required --}}
         <form action="/login" method="POST">
           <div class="mb-3">
             <label for="email" class="form-label">Email</label>
@@ -17,6 +18,7 @@
               required
             >
           </div>
+          {{!-- Password, required --}}
           <div class="mb-3">
             <label for="password" class="form-label">Password</label>
             <input
